--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     </style>
 </head>
 <body>
-<video ishivideo="true">
-    <source src="https://media.w3.org/2010/05/sintel/trailer.mp4" type="video/mp4">
-</video>
 <video ishivideo="true" autoplay="true" isrotate="true" autoHide="false">
+    <source src="assets/video.mp4" type="video/mp4">
     <source src="https://media.w3.org/2010/05/sintel/trailer.mp4" type="video/mp4">
 </video>
 
